fixed display on mobile

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100vmin;
     gap: 2rem;
 }
 
